<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/guide_1"
    android:orientation="vertical" >

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="25dp"-->
        <!--android:background="@mipmap/top_ui"-->
        <!--&gt;-->

        <include layout="@layout/head" />

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="38.0dip"
            android:background="@color/text_blue"
            android:baselineAligned="false"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/btn_prev_month"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/left_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/triangle06_states"
                    android:duplicateParentState="true"
                    android:text=""
                    android:textSize="16.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffffff"
                    android:textSize="21.0dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_next_month"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/right_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/triangle05_states"
                    android:duplicateParentState="true"
                    android:text=""
                    android:textSize="16.0dip" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="24.0dip"
            android:background="@color/background" >

            <TextView
                style="@style/weekName"
                android:text="@string/sunday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/monday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/tuesday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/wednesday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/thursday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/friday_text" />

            <TextView
                style="@style/weekName"
                android:text="@string/saturday_text" />
        </LinearLayout>

        <GridView
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#f1f1f1"
            android:clickable="true"
            android:clipChildren="true"
            android:columnWidth="55.0dip"
            android:horizontalSpacing="1.0dip"
            android:listSelector="@null"
            android:numColumns="7"
            android:paddingBottom="1.0dip"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1.0dip" />



    </LinearLayout>


    <Button
        android:visibility="gone"
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel" 
        android:textSize="22sp"
        style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>